force-app/main/default/objects/FSM_SendWorkOrderUpdates__e/FSM_SendWorkOrderUpdates__e.object-meta.xml
<CustomObject>
    <label>Send Work Order Updates</label>
    <pluralLabel>Send Work Order Updates</pluralLabel>
</CustomObject>