force-app/main/default/objects/FSM_SendWorkOrderUpdates__e/fields/FSM_AppointmentBookinginfoUrl__c.field-meta.xml
<CustomField>
    <fullName>FSM_AppointmentBookinginfoUrl__c</fullName>
    <description>Created as part of SFI-1927</description>
    <label>Appointment Booking URL</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>