force-app/main/default/objects/FSM_SendWorkOrderUpdates__e/fields/FSM_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>FSM_ExternalId__c</fullName>
    <label>SAP Order Operation Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>