force-app/main/default/objects/FSM_SendWorkOrderUpdates__e/fields/FSM_OperationNumber__c.field-meta.xml
<CustomField>
    <fullName>FSM_OperationNumber__c</fullName>
    <description>SFI-694</description>
    <label>Operation Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>