force-app/main/default/objects/FSM_SendWorkOrderUpdates__e/fields/FSM_OrderNumber__c.field-meta.xml
<CustomField>
    <fullName>FSM_OrderNumber__c</fullName>
    <label>Order Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>