force-app/main/default/objects/FSM_SendWorkOrderUpdates__e/fields/FSM_RejectReason__c.field-meta.xml
<CustomField>
    <fullName>FSM_RejectReason__c</fullName>
    <description>SFI-36</description>
    <label>Reject Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>