force-app/main/default/objects/FSM_SendWorkOrderUpdates__e/fields/FSM_SALocationStatus__c.field-meta.xml
<CustomField>
    <fullName>FSM_SALocationStatus__c</fullName>
    <label>Location Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>