force-app/main/default/objects/FSM_SendWorkOrderUpdates__e/fields/FSM_SAPUserID__c.field-meta.xml
<CustomField>
    <fullName>FSM_SAPUserID__c</fullName>
    <description>SFI-694</description>
    <label>SAP User ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>