force-app/main/default/objects/FSM_SendWorkOrderUpdates__e/fields/FSM_ScheduledEnd__c.field-meta.xml
<CustomField>
    <fullName>FSM_ScheduledEnd__c</fullName>
    <description>Created as part of SFI-1927</description>
    <label>Scheduled End</label>
    <type>DateTime</type>
</CustomField>