force-app/main/default/objects/FSM_SendWorkOrderUpdates__e/fields/FSM_ServiceResourceExternalid__c.field-meta.xml
<CustomField>
    <fullName>FSM_ServiceResourceExternalid__c</fullName>
    <description>SFI-2779</description>
    <label>Service Resource Externalid</label>
    <length>100</length>
    <type>Text</type>
</CustomField>