force-app/main/default/objects/FSM_SendWorkOrderUpdates__e/fields/FSM_Status__c.field-meta.xml
<CustomField>
    <fullName>FSM_Status__c</fullName>
    <label>Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>