force-app/main/default/objects/FSM_SendWorkOrderUpdates__e/fields/FSM_SuspendReason__c.field-meta.xml
<CustomField>
    <fullName>FSM_SuspendReason__c</fullName>
    <description>SFI-36</description>
    <label>Suspend Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>